add / update docs

--- a/docs/10-intro.mdx
+++ b/docs/10-intro.mdx
@@ -84,9 +84,9 @@ graph LR
 **Full control** - Work offline, customize everything:
 
 ```bash
-# Clone workshop
-git clone https://github.com/mrlynn/ai4-multimodal-agents-n8n.git
-cd ai4-multimodal-agents-n8n
+# Clone workshop deployment repo
+git clone https://github.com/mongodb-developer/multimodal-pdf-agent-n8n.git
+cd multimodal-pdf-agent-n8n
 
 # Start services
 cp .env.example .env
