--- a/docs/80-upload-interface.mdx
+++ b/docs/80-upload-interface.mdx
@@ -19,8 +19,9 @@ http://localhost:3000/upload-interface.html
 
 Open the file directly in your browser:
 ```
-/workspaces/ai4-multimodal-agents-n8n/static/upload-interface.html
+/workspaces/multimodal-pdf-agent-n8n-docs/static/upload-interface.html
 ```
+(Note: The upload interface is in the documentation repository)
 
 ## Features
 
@@ -42,7 +43,7 @@ Open the file directly in your browser:
 
 First, import the real multimodal agent workflow:
 ```
-/workspaces/ai4-multimodal-agents-n8n/init/workflows/06-real-voyage-multimodal.json
+/workspaces/multimodal-pdf-agent-n8n/init/workflows/06-real-voyage-multimodal.json
 ```
 
 ### 2. Configure Webhook URLs
@@ -85,7 +86,7 @@ Try these types of questions:
 
 ### Modify the Interface
 
-Edit `/static/upload-interface.html` to:
+Edit `/static/upload-interface.html` (in the docs repository) to:
 - Change colors and styling
 - Add additional features
 - Modify the layout
