--- a/docs/15-github-codespaces.mdx
+++ b/docs/15-github-codespaces.mdx
@@ -21,7 +21,7 @@ GitHub Codespaces provides a complete, cloud-based development environment that 
 
 <Screenshot src="/img/codespaces-button.png" alt="GitHub Codespaces Button" />
 
-1. Go to the workshop repository
+1. Go to the [workshop deployment repository](https://github.com/mongodb-developer/multimodal-pdf-agent-n8n)
 2. Click the green **Code** button
 3. Select **Codespaces** tab
 4. Click **Create codespace on main**
@@ -196,6 +196,8 @@ docker-compose exec n8n n8n export:workflow --all
 
 ## 🎓 Workshop-Specific Setup
 
+**Important**: Launch Codespaces from the [deployment repository](https://github.com/mongodb-developer/multimodal-pdf-agent-n8n), not this documentation site!
+
 Our devcontainer automatically:
 
 1. **Installs Dependencies**
@@ -223,7 +225,7 @@ With Codespaces, you can:
 
 ### Next Steps
 
-1. ✅ Codespace is running
+1. ✅ Launch Codespace from [deployment repository](https://github.com/mongodb-developer/multimodal-pdf-agent-n8n)
 2. ✅ Services are accessible
 3. ✅ Ready to build workflows
 
