--- a/docs/35-voyage-ai-setup.mdx
+++ b/docs/35-voyage-ai-setup.mdx
@@ -56,9 +56,15 @@ The workshop embedding API is designed to work directly with n8n's **HTTP Reques
 The `text` field is required! Make sure to include the actual text you want to embed. In workflows, this usually comes from a previous node using `{{ $json.textContent }}` or similar.
 :::
 
-### 3. Testing the Embedding API
+### 3. Interactive API Testing
 
-To test if the API is working, create a simple workflow:
+Test the embedding API directly from this documentation before building your n8n workflow:
+
+<EmbeddingTester />
+
+### 4. Testing in n8n
+
+To test if the API is working in n8n, create a simple workflow:
 
 1. **Manual Trigger** node
 2. **Set** node with test data:
@@ -81,7 +87,7 @@ To test if the API is working, create a simple workflow:
 }
 ```
 
-### 4. Troubleshooting
+### 5. Troubleshooting
 
 **Error: "Invalid character in header content"**
 - This indicates an issue with the API key configuration on the server
@@ -100,7 +106,7 @@ curl -X POST https://workshop-embedding-api.vercel.app/api/embed \
   -d '{"text": "test embedding", "model": "voyage-3"}'
 ```
 
-### 5. Alternative: Mock Embeddings for Testing
+### 6. Alternative: Mock Embeddings for Testing
 
 If the API is temporarily unavailable, you can use a **Code** node in n8n to generate mock embeddings:
 
