--- a/docs/10-intro.mdx
+++ b/docs/10-intro.mdx
@@ -13,6 +13,28 @@ import TabItem from '@theme/TabItem';
 |Prerequisites|n8n installed, MongoDB Atlas account, Voyage AI API key|
 |Time to complete|2 hours|
 
+<SlideRecap 
+  title="From Presentation to Practice"
+  items={[
+    {
+      icon: "🏗️",
+      title: "Architecture Overview",
+      description: "We covered how n8n, MongoDB Atlas, and Voyage AI work together"
+    },
+    {
+      icon: "🎯", 
+      title: "Learning Objectives",
+      description: "Build a production-ready multimodal PDF processing system"
+    },
+    {
+      icon: "⚡",
+      title: "Visual Workflows",
+      description: "Why n8n's no-code approach makes AI development accessible"
+    }
+  ]}
+  nextSection="Now we'll build this system step by step!"
+/>
+
 <ProgressTracker steps={[
   {
     title: "Environment Setup",
