--- a/docs/25-n8n-first-run.mdx
+++ b/docs/25-n8n-first-run.mdx
@@ -15,6 +15,22 @@ sidebar_position: 25
 
 Let's walk through your first n8n experience and set up the foundation for our multimodal PDF agent.
 
+<InstructorNotes 
+  timing="n8n First Run section (10-15 minutes)"
+  notes={[
+    "This is often where attendees encounter their first issues",
+    "Common problems: Docker not running, ports in use, browser cache",
+    "Have attendees confirm they can access n8n before proceeding",
+    "License activation email sometimes goes to spam folder"
+  ]}
+  tips={[
+    "Share your own n8n screen to show what success looks like",
+    "Encourage attendees to help each other with setup issues",
+    "Keep a few minutes buffer for troubleshooting",
+    "Consider setting up a backup n8n instance for demos"
+  ]}
+/>
+
 <WorkshopExercise 
   title="Launch and Configure n8n" 
   difficulty="beginner"
