--- a/docs/30-mongodb-atlas-setup.mdx
+++ b/docs/30-mongodb-atlas-setup.mdx
@@ -8,6 +8,22 @@ This workshop uses two MongoDB environments:
 - **Local MongoDB** (via Docker) for development and testing
 - **MongoDB Atlas** for production vector search
 
+<InstructorNotes 
+  timing="MongoDB Atlas Setup (15-20 minutes)"
+  notes={[
+    "Atlas signup can take a few minutes - start this section early",
+    "Credit card may be required but we'll stay within free tier limits",
+    "Network access setup often confuses first-time users",
+    "Connection string formatting is a common source of errors"
+  ]}
+  tips={[
+    "Demo the Atlas setup process on screen while attendees follow",
+    "Emphasize the importance of saving connection strings securely",
+    "Show how to test connections before moving to workflows",
+    "Have backup connection strings ready for troubleshooting"
+  ]}
+/>
+
 ## 🐳 Local MongoDB (Development)
 
 Our Docker setup includes a local MongoDB instance that's already configured and running:
